# N-Body-Simulation

./: CMakeLists.txt  README.md  run.bat  vertexshader.vert
code/: BarnesHut.cpp  BarnesHut.h  Bound.cpp  Bound.h  ForceInteraction.cpp  ForceInteraction.h  Node.cpp  Node.h  Particle.cpp  Particle.h  SphereRender.cpp  SphereRender.h  SphereRenderData.cpp  SphereRenderData.h  main.cpp  sector.cpp  shader_s.h
saved_gl/: CMakeLists.txt  main.cpp
